# Loris-Grocer

./: README.md  employee.py  encryption.py  error.py  external.txt  functions.py  grocer.db  improvements.txt  init_tables.py  inventory.py  main.py  pyproject.toml  sales.py  table.py
db_query/: employee.py  encryption.py  functions.py  inventory.py  sales.py
db_query/.upm/: store.json
